[gd_scene load_steps=33 format=3 uid="uid://w0oq4ltku8q4"]

[ext_resource type="Script" uid="uid://cf78yxghjh26e" path="res://Main/Scripts/world.gd" id="1_0ivwq"]
[ext_resource type="PackedScene" uid="uid://cgqvjob73qmeq" path="res://Player/Scene/player.tscn" id="1_b8kj6"]
[ext_resource type="PackedScene" uid="uid://1a5gogpt640x" path="res://Main/Scene/Monsters/silver_bat.tscn" id="2_vx3av"]
[ext_resource type="PackedScene" uid="uid://eu65c5d0uy42" path="res://Main/Scene/Monsters/flying_specter.tscn" id="3_30g2l"]
[ext_resource type="PackedScene" uid="uid://ddsr50itu6o7x" path="res://Main/Scene/touch_sense_ui.tscn" id="3_leevy"]
[ext_resource type="PackedScene" uid="uid://cjsx1gxvmgrcm" path="res://Player/Scene/sense_ui.tscn" id="3_x3rxd"]
[ext_resource type="PackedScene" uid="uid://ccetflehhcyu" path="res://Main/Scene/Monsters/karen_centipede.tscn" id="4_5bhyt"]
[ext_resource type="PackedScene" uid="uid://cvcgq6d6dlntw" path="res://Main/Scene/gun_inventory.tscn" id="5_aq6cu"]
[ext_resource type="PackedScene" uid="uid://b0e60o51n3dsa" path="res://Main/Scene/map.tscn" id="5_jh5pj"]
[ext_resource type="PackedScene" uid="uid://dwn38up23spxd" path="res://Main/Scene/footsteps.tscn" id="7_iwwlx"]
[ext_resource type="PackedScene" uid="uid://ctt2xkp8c1twc" path="res://Main/Scene/gun_parts.tscn" id="7_rx81u"]
[ext_resource type="PackedScene" uid="uid://du70u5ltjl1xf" path="res://Main/Scene/code_game.tscn" id="7_vx3av"]
[ext_resource type="Texture2D" uid="uid://dm56u7qpm3gf1" path="res://assets/Light_Shadow.webp" id="10_y3gje"]
[ext_resource type="PackedScene" uid="uid://bminl27udyhid" path="res://Main/Scene/in_game_notes.tscn" id="15_ge7dy"]
[ext_resource type="PackedScene" uid="uid://cy6r4nqv5cqrp" path="res://Main/Scene/monster_selection.tscn" id="16_s0ujw"]
[ext_resource type="PackedScene" uid="uid://c6ws7wo3sbay7" path="res://Main/Scene/scratches.tscn" id="17_5bhyt"]
[ext_resource type="PackedScene" uid="uid://be138b6vp1h2r" path="res://Main/Scene/warm_colder_game.tscn" id="19_2spsx"]
[ext_resource type="Texture2D" uid="uid://ftkxv54jh1ml" path="res://assets/evoli_assets/GunPart3_Frame.PNG" id="19_nxeb2"]
[ext_resource type="Texture2D" uid="uid://ijkgu6rpj1c4" path="res://assets/evoli_assets/GunBullet.PNG" id="20_nxeb2"]
[ext_resource type="PackedScene" uid="uid://ci1p5msjty1kk" path="res://Main/Scene/final_selection_area.tscn" id="21_i0kyt"]
[ext_resource type="Texture2D" uid="uid://yhqn4xd0j1wi" path="res://assets/evoli_assets/GunPart2_Barrel.PNG" id="21_iwwlx"]
[ext_resource type="Texture2D" uid="uid://ci8o20b3ar060" path="res://assets/evoli_assets/200x200pxSafe_puzzle_Sight.PNG" id="21_jh5pj"]
[ext_resource type="Texture2D" uid="uid://d1vkmcw6jwh4v" path="res://assets/evoli_assets/GunPart1_Top.PNG" id="22_iwwlx"]
[ext_resource type="Texture2D" uid="uid://dv34xmnk5t1gf" path="res://assets/evoli_assets/StickyNote1_Sight_Puzzle.PNG" id="24_y3gje"]
[ext_resource type="Texture2D" uid="uid://bjxlros7ga2gk" path="res://assets/evoli_assets/StickyNote2_Sight_Puzzle.PNG" id="25_xdnnb"]
[ext_resource type="Texture2D" uid="uid://d4es6gba5vse2" path="res://assets/evoli_assets/TrashPile2_SightPuzzle.PNG" id="25_y3gje"]
[ext_resource type="Texture2D" uid="uid://onv0ll5xn0oq" path="res://assets/evoli_assets/Trash_Pile1_Sight_Puzzle.PNG" id="26_xdnnb"]
[ext_resource type="Texture2D" uid="uid://8unawog3lpha" path="res://assets/evoli_assets/Furniture1_EmployeeLounge.PNG" id="27_nxeb2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xdnnb"]
size = Vector2(101, 93)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iwwlx"]
size = Vector2(358, 200.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vx3av"]
size = Vector2(170, 178)

[sub_resource type="CircleShape2D" id="CircleShape2D_vx3av"]
radius = 191.01

[node name="World" type="Node2D" node_paths=PackedStringArray("player")]
script = ExtResource("1_0ivwq")
player = NodePath("Player")
silver_bat = ExtResource("2_vx3av")
flying_specter = ExtResource("3_30g2l")
karen_centipede = ExtResource("4_5bhyt")

[node name="Map" parent="." instance=ExtResource("5_jh5pj")]
position = Vector2(915, -1645)
scale = Vector2(2, 2)

[node name="scratch" type="Node2D" parent="."]
position = Vector2(106, -2035)

[node name="scratches" parent="scratch" instance=ExtResource("17_5bhyt")]
position = Vector2(133, 1472)

[node name="scratches2" parent="scratch" instance=ExtResource("17_5bhyt")]
position = Vector2(3931, 1690)

[node name="scratches3" parent="scratch" instance=ExtResource("17_5bhyt")]
position = Vector2(1523, 83)

[node name="footstep" type="Node2D" parent="."]

[node name="Footsteps" parent="footstep" instance=ExtResource("7_iwwlx")]
position = Vector2(1372, 1362)
rotation = -1.5708

[node name="Footsteps2" parent="footstep" instance=ExtResource("7_iwwlx")]
position = Vector2(3405, 1074)
rotation = 1.5708

[node name="Lights" type="Node2D" parent="."]
position = Vector2(-653, -1208)

[node name="Lamp" type="PointLight2D" parent="Lights"]
scale = Vector2(3, 3)
color = Color(0.501961, 0.501961, 0.501961, 1)
energy = 0.6
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 2.0
texture = ExtResource("10_y3gje")

[node name="Lamp2" type="PointLight2D" parent="Lights"]
position = Vector2(1307, -13)
scale = Vector2(3, 3)
color = Color(0.501961, 0.501961, 0.501961, 1)
energy = 0.6
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 2.0
texture = ExtResource("10_y3gje")

[node name="WarmColderGame" parent="." instance=ExtResource("19_2spsx")]
position = Vector2(-9, -1160)

[node name="Icon" parent="WarmColderGame" index="0"]
position = Vector2(2633, -1587)

[node name="Icon2" parent="WarmColderGame" index="1"]
position = Vector2(-1169, 400)

[node name="Icon3" parent="WarmColderGame" index="2"]
position = Vector2(5070, 910)

[node name="Icon4" parent="WarmColderGame" index="3"]
position = Vector2(-1161, 2390)

[node name="Icon5" parent="WarmColderGame" index="4"]
position = Vector2(2620, 2398)

[node name="teleport_points" type="Node2D" parent="."]
position = Vector2(-201, -2031)

[node name="spawn1" type="Marker2D" parent="teleport_points"]
position = Vector2(5373, 3123)

[node name="spawn2" type="Marker2D" parent="teleport_points"]
position = Vector2(1080, 1362)

[node name="spawn3" type="Marker2D" parent="teleport_points"]
position = Vector2(2235, -851)

[node name="spawn4" type="Marker2D" parent="teleport_points"]
position = Vector2(2412, 1931)

[node name="Furniture" type="Node2D" parent="."]

[node name="Obj" type="StaticBody2D" parent="Furniture"]
position = Vector2(1206, -941)
scale = Vector2(2, 2)

[node name="TrashPile2SightPuzzle" type="Sprite2D" parent="Furniture/Obj"]
texture = ExtResource("25_y3gje")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Furniture/Obj"]
position = Vector2(3.5, 1.5)
shape = SubResource("RectangleShape2D_xdnnb")

[node name="Obj2" type="StaticBody2D" parent="Furniture"]
position = Vector2(997, -938)
scale = Vector2(2, 2)

[node name="TrashPile2SightPuzzle" type="Sprite2D" parent="Furniture/Obj2"]
texture = ExtResource("26_xdnnb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Furniture/Obj2"]
position = Vector2(3.5, 1.5)
shape = SubResource("RectangleShape2D_xdnnb")

[node name="Obj3" type="StaticBody2D" parent="Furniture"]
position = Vector2(5029, -731)
scale = Vector2(2, 2)

[node name="TrashPile2SightPuzzle" type="Sprite2D" parent="Furniture/Obj3"]
texture = ExtResource("27_nxeb2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Furniture/Obj3"]
position = Vector2(7, 50.75)
shape = SubResource("RectangleShape2D_iwwlx")

[node name="83" type="Sprite2D" parent="Furniture"]
position = Vector2(1457, -2737)
texture = ExtResource("24_y3gje")

[node name="Lamp" type="PointLight2D" parent="Furniture/83"]
scale = Vector2(2, 2)
color = Color(0.501961, 0.501961, 0.501961, 1)
energy = 0.6
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 2.0
texture = ExtResource("10_y3gje")

[node name="57" type="Sprite2D" parent="Furniture"]
position = Vector2(5295, 486)
texture = ExtResource("25_xdnnb")

[node name="Lamp" type="PointLight2D" parent="Furniture/57"]
scale = Vector2(2, 2)
color = Color(0.501961, 0.501961, 0.501961, 1)
energy = 0.6
shadow_enabled = true
shadow_filter = 1
shadow_filter_smooth = 2.0
texture = ExtResource("10_y3gje")

[node name="parts" type="Node2D" parent="."]
position = Vector2(-562, -2019)

[node name="frame_item" parent="parts" instance=ExtResource("7_rx81u")]
position = Vector2(-72, 46)
icon = ExtResource("19_nxeb2")
part_name = "frame"

[node name="barrel_item" parent="parts" instance=ExtResource("7_rx81u")]
position = Vector2(148, -55)
icon = ExtResource("21_iwwlx")
part_name = "barrel"

[node name="slide_item" parent="parts" instance=ExtResource("7_rx81u")]
position = Vector2(-231, -47)
icon = ExtResource("22_iwwlx")
part_name = "slide"

[node name="bullet_item" parent="parts" instance=ExtResource("7_rx81u")]
position = Vector2(-3, -129)
icon = ExtResource("20_nxeb2")
part_name = "bullet"

[node name="Player" parent="." node_paths=PackedStringArray("world") instance=ExtResource("1_b8kj6")]
position = Vector2(-123, 190)
world = NodePath("..")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Touch_Sense_UI" parent="UI" instance=ExtResource("3_leevy")]
offset_top = 67.0
offset_bottom = -508.0
metadata/_edit_use_anchors_ = true

[node name="won" type="Label" parent="UI"]
self_modulate = Color(0, 1, 0, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -232.0
offset_top = -120.0
offset_right = 258.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_font_sizes/font_size = 100
text = "YOU WON"
metadata/_edit_use_anchors_ = true

[node name="retry" type="Button" parent="UI/won"]
layout_mode = 0
offset_left = 114.0
offset_top = 133.0
offset_right = 380.0
offset_bottom = 278.0
theme_override_font_sizes/font_size = 100
text = "Retry"
metadata/_edit_use_anchors_ = true

[node name="current_sense" type="Label" parent="UI"]
visible = false
offset_right = 40.0
offset_bottom = 23.0
scale = Vector2(0.3, 0.3)
mouse_filter = 1
theme_override_font_sizes/font_size = 100
text = "Current Sense selected:"

[node name="Gun_Inventory" parent="UI" instance=ExtResource("5_aq6cu")]
offset_left = -1.0
offset_top = -1.0
offset_right = -1.0
offset_bottom = -1.0
metadata/_edit_use_anchors_ = true

[node name="Sense_UI" parent="UI" instance=ExtResource("3_x3rxd")]
offset_left = 432.0
offset_top = 527.0
offset_right = 432.0
offset_bottom = 527.0
scale = Vector2(0.4, 0.4)
metadata/_edit_use_anchors_ = true

[node name="Code_Game" parent="UI" instance=ExtResource("7_vx3av")]
visible = false
offset_left = 315.0
offset_right = 315.0

[node name="InGameNotes" parent="UI" instance=ExtResource("15_ge7dy")]
offset_left = 9.0
offset_top = 590.0
offset_right = -568.0
offset_bottom = 7.0
scale = Vector2(0.6, 0.6)
metadata/_edit_use_anchors_ = true

[node name="MonsterSelection" parent="UI" node_paths=PackedStringArray("world") instance=ExtResource("16_s0ujw")]
visible = false
world = NodePath("../..")

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[node name="code" type="CharacterBody2D" parent="." groups=["Code"]]
position = Vector2(2023, -2336)
collision_layer = 2
collision_mask = 3

[node name="Sprite2D" type="Sprite2D" parent="code"]
texture = ExtResource("21_jh5pj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="code"]
position = Vector2(-3, -4)
shape = SubResource("RectangleShape2D_vx3av")

[node name="Label" type="Label" parent="code"]
offset_left = -54.0
offset_top = -164.0
offset_right = 153.0
offset_bottom = -27.0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 100
text = "Safe"
metadata/_edit_use_anchors_ = true

[node name="code_Area" type="Area2D" parent="code"]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="code/code_Area"]
shape = SubResource("CircleShape2D_vx3av")

[node name="Marker2D" type="Marker2D" parent="code"]
position = Vector2(-3, -403)

[node name="flickering_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="SpawnPoint" type="Marker2D" parent="."]

[node name="bullet_spawn" type="Marker2D" parent="."]
position = Vector2(2200, -850)

[node name="FinalSelectionArea" parent="." instance=ExtResource("21_i0kyt")]
position = Vector2(2211, -551)

[connection signal="correct_statue_picked" from="WarmColderGame" to="." method="_on_warm_colder_game_correct_statue_picked"]
[connection signal="wrong_statue_picked" from="WarmColderGame" to="." method="_on_warm_colder_game_wrong_statue_picked"]
[connection signal="collected" from="parts/frame_item" to="." method="_on_item_collected"]
[connection signal="collected" from="parts/barrel_item" to="." method="_on_item_collected"]
[connection signal="collected" from="parts/slide_item" to="." method="_on_item_collected"]
[connection signal="collected" from="parts/bullet_item" to="." method="_on_item_collected"]
[connection signal="died" from="Player" to="." method="_on_player_died"]
[connection signal="pressed" from="UI/won/retry" to="." method="_on_retry_pressed"]
[connection signal="all_parts" from="UI/Gun_Inventory" to="." method="_on_gun_inventory_all_parts"]
[connection signal="puzzle_solved" from="UI/Code_Game" to="." method="_on_code_game_puzzle_solved"]
[connection signal="monster_selected" from="UI/MonsterSelection" to="." method="_on_monster_selection_monster_selected"]
[connection signal="body_entered" from="code/code_Area" to="." method="_on_code_area_body_entered"]
[connection signal="body_exited" from="code/code_Area" to="." method="_on_code_area_body_exited"]
[connection signal="timeout" from="flickering_timer" to="." method="_on_flickering_timer_timeout"]
[connection signal="body_entered" from="FinalSelectionArea/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="FinalSelectionArea/Area2D" to="." method="_on_area_2d_body_exited"]

[editable path="WarmColderGame"]
[editable path="FinalSelectionArea"]
